src/objects/Invoice_Line_Item__c.object
<CustomObject>
    <description>create( ) API callout from on-prem to request Zuora to generate the data source file, HTTP GET to download the file, and bulk API upload to upload the records in Salesforce.</description>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_To_Invoice_Item_ID__c</fullName>
        <label>Applied To Invoice Item ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <description>The amount being charged to the invoice item. This amount doesn’t include taxes UNLESS the charge’s tax mode is inclusive.</description>
        <inlineHelpText>The amount being charged to the invoice item. This amount doesn’t include taxes UNLESS the charge’s tax mode is inclusive.</inlineHelpText>
        <label>Charge Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <description>The date when the Invoice Item record is created.</description>
        <label>Charge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charge_Description__c</fullName>
        <description>A description of the invoice item&apos;s charge.</description>
        <label>Charge Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charge_ID__c</fullName>
        <description>The ID of the rate plan charge that is associated with this invoice item upon object creation.</description>
        <label>Charge ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Name__c</fullName>
        <description>The name of the invoice item’s charge.</description>
        <label>Charge Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Number__c</fullName>
        <description>The unique identifier of the invoice item&apos;s charge.</description>
        <label>Charge Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_ID__c</fullName>
        <description>The user ID of the person who created the invoice item.</description>
        <label>Created By ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>The date when the Invoice Item record is created.</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>The ID of this record.</description>
        <externalId>true</externalId>
        <label>ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_ID__c</fullName>
        <description>The ID of the invoice associated</description>
        <label>Invoice ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Type__c</fullName>
        <description>Identifies the kind of charge where:
0 – charge
1 – discount
2 – prepayment
3 – tax</description>
        <label>Processing Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>A description of the product associated with this invoice item.</description>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <description>The ID of the product associated with this invoice item.</description>
        <label>Product ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>The name of the product associated with this invoice item.</description>
        <label>Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The number of units for this invoice item.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Charge_ID__c</fullName>
        <description>The ID of the rate plan charge that&apos;s associated with this invoice item.</description>
        <label>Rate Plan Charge ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Code__c</fullName>
        <description>Associates this invoice item with a specific revenue recognition code.</description>
        <label>Revenue Recognition Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Start_Date__c</fullName>
        <description>The date when revenue recognition is triggered.</description>
        <label>Revenue Recognition Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Trigger_Condition__c</fullName>
        <description>Specifies when revenue recognition begins based on a triggering event.</description>
        <label>Revenue Recognition Trigger Condition</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <description>The unique SKU for the product associated with this invoice item.</description>
        <label>SKU</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <description>The end date of the service period associated with this invoice item. Service ends one second before the date in this value.</description>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <description>The start date of the service period associated with this invoice item. If the associated charge is a one-time fee, then this date is the date of that charge.</description>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_ID__c</fullName>
        <description>The ID of the subscription associated with the invoice item.</description>
        <externalId>true</externalId>
        <label>Subscription ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Number__c</fullName>
        <label>Subscription Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <description>The amount of tax applied to the invoice item’s charge</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <description>Specifies the tax code for taxation rules</description>
        <label>Tax Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Amount__c</fullName>
        <description>The amount of the invoice item’s charge that’s tax exempt.</description>
        <label>Tax Exempt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Mode__c</fullName>
        <description>The tax mode of the invoice item.

TaxExclusive
TaxInclusive</description>
        <label>Tax Mode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>Specifies the unit to measure the charge.</description>
        <label>UOM</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>The per unit price of the invoice item</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_By_ID__c</fullName>
        <description>The ID of the user who last updated the invoice item.</description>
        <label>Updated By ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Date__c</fullName>
        <description>The date when the invoice item was last updated</description>
        <label>Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Invoice Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_ID__c</columns>
        <columns>Charge_Name__c</columns>
        <columns>Charge_Amount__c</columns>
        <columns>Charge_Date__c</columns>
        <columns>Tax_Amount__c</columns>
        <columns>Tax_Code__c</columns>
        <columns>Subscription__c</columns>
        <columns>Subscription_ID__c</columns>
        <columns>Subscription_Number__c</columns>
        <columns>Tax_Exempt_Amount__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>UOM__c</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_ID__c</field>
            <operation>contains</operation>
            <value>2c92c094555ce889015571ec51912d53</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>